--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,7 +1,8 @@
 name: Sync Anime Data
 
 on:
-  repository_dispatch:
+  workflow_dispatch: # Trigger manual
+  repository_dispatch: # Trigger dari frontend
     types: [sync-request]
 
 jobs:
@@ -11,12 +12,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           token: ${{ secrets.ACTIONS_TOKEN }}
-          
+
       - name: Update JSON Data
         run: |
           echo '${{ toJson(github.event.client_payload.data) }}' > anime_data.json
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add .
-          git commit -m "Update anime data [skip ci]"
+          git commit -m "Update anime data"
           git push
